TAG: webshare-4-2-2-3
DATE: 05/01/2009
STAFF: mhall
CHANGES: Merged to the trunk, Alpha Build tag.

TAG: webshare-4-2-2-2
DATE: 04/28/2009
STAFF: mhall
CHANGES: Test build tag for TR 9592

TAG: webshare-4-2-2-1
DATE: 04/28/2009
STAFF: mhall
CHANGES: Test build tag for TR 9592

TAG: webshare-4-2-2-0
DATE: 04/28/2009
STAFF: mhall
CHANGES: Test build tag for TR 9592

TAG: webshare-tr9592-BP
DATE: 04/15/2009
STAFF: mhall
RELEASE: branch point
CHANGES:
1) branch point for tr9592

TAG: webshare-4-2-1-1
DATE: 03/16/2009
STAFF: marka
CHANGES: merging tr9440 to trunk

TAG: webshare-tr9440-BP
DATE: 01/20/2009
STAFF: marka
RELEASE: branch point
CHANGES:
1) branch point for tr9440

TAG: webshare-4-2-0-x (1 -> 5)
DATE: 12/3/2008
STAFF: marka/pf
CHANGES: 
1) merging branch tr9329 to trunk
2) dev/alpha build tags

TAG: webshare-tr9329-x (1 -> 3)
DATE: 12/1/2008
STAFF: marka/pf
CHANGES: search tool dev build

TAG: webshare-tr9329-BP
DATE: 10/28/2008
STAFF: marka
RELEASE: branch point
CHANGES:
1) branch point for searchtool release

TAG: webshare-4-1-2-4
DATE: 09/18/2008
STAFF: jsb
CHANGES:
1) added PHENO_CACHE_TIMEOUT to global config files

TAG: webshare-4-1-2-3
DATE: 09/10/2008
STAFF: jsb
CHANGES:
1) fixes after phenoview alpha 1 build

TAG: webshare-4-1-2-2
DATE: 09/03/2008
STAFF: jsb
CHANGES:
1) minor documentation additions for mgi.js

TAG: webshare-4-1-2-1
DATE: 08/19/2008
STAFF: jsb
CHANGES:
1) fixes for items in QC after dev build

TAG: webshare-4-1-2-0
DATE: 08/06/2008
STAFF: jsb
CHANGES:
1) merge tr8079 to trunk

TAG: webshare-4-1-1-1
DATE: 7/14/2008
STAFF: marka
CHANGES:
1) merge tr9088 to trunk

TAG: webshare-4-1-0-1
DATE: 6/03/2008
STAFF: marka
CHANGES:
1) merge tr8528 to trunk

TAG: webshare-tr8528-1
DATE: 5/28/2008
STAFF: marka
RELEASE: dev build
CHANGES:
1) dev build tag

TAG: webshare-tr8079-BP
DATE: 5/20/2008
STAFF: jsb
RELEASE: branch point
CHANGES:
1) branch point for phenoview release

TAG: webshare-4-0-0-18
DATE: 2/25/08
STAFF: mhall