@@ -1,3 +1,9 @@
+TAG: webshare-4-2-2-4
+DATE: 05/12/2009
+STAFF: mhall
+CHANGES: Fixed some small template related issue found during the alpha
+build.
+
 TAG: webshare-4-2-2-3
 DATE: 05/01/2009
 STAFF: mhall
